# HiST

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: gene_prediction.yaml
configs/dataset_config/: all_visium.yaml  legacy_st.yaml  xenium.yaml
configs/logging/: default.yaml
configs/model/: hist.yaml
lib/backbones/: __init__.py  config.py  patch_encoder.py
lib/utils/: __init__.py  coord_aug.py  data.py  entrypoint.py  logging.py  metrics.py  model_utils.py  seed.py  wandb_helper.py
src/span/builders/: config_builder.py
src/span/layers/: attention.py  convolution.py  positional_encoding.py  transformer.py
src/span/preprocessing/: transforms.py
tasks/gene_prediction/: __init__.py  dataset.py  main.py  model.py  trainer.py
